static/main.css
html {
	background: #222222;
	background-image: linear-gradient(0deg, #290015 0%, #222222 6%);
	color-scheme: light dark;
	color: #FFFFEB;
	min-height: 100%;
}


body { margin: 0 auto; }

a {
	text-decoration: none;
	color: #FFFFEB;
	&:visited {
		text-decoration: none;
		color: #FFFFEB;
	}
	&.btn {
		display: inline-block;
		font-size: 108%;
		font-weight: 600;
		background-color: #222;
		font-family: 'Titillium Web', sans-serif;
		padding: 3px 14px;
		border-top: #888 solid 1px;
		border-right: 1px #444 solid;
		border-bottom: #444 solid 2px; 
		border-left: #999 solid 1px;
		border-radius: 4px;
		&:hover, &.active { border-bottom: #880046 solid 2px; }
	}
}

div {
	vertical-align: bottom;
	&.error {
		display: block;
		padding: 0.5rem 1rem;
		margin: 0.5rem 0;
		border: solid #ff200080 2px;
		background: #70281080;
		border-radius: 4px;
	}
}

h1,h2,h3 { margin: 0 }
summary { display: block }
details:open > summary.hide { display: none; }

.repo-header, .branch-header, .tag-header {
	display: flex;
	justify-content: space-between;
	h3 {
		font-family: 'Titillium Web', sans-serif;
		font-size: 220%;
		margin: 0 auto 0 0;
		display:inline-block;
	}
	.description {
		padding: 0 0 0 1rem;
		font-size: 90%;
		color: #aaa;
	}
	.repo-header-side {
		margin: auto 0 0.5rem;
	}
	div.gituri {
		display: inline-block;
		border-top: 1px solid black;
		border-left: 1px solid black;
		border-radius: 6px;
		border-bottom: 1px solid #737373;
		border-right: 1px solid #737373;
		margin: auto 14px;
		padding: 5px 12px;
		background: #333;
		white-space: pre;
		/* browsers are so dumb */
		float:left;
	}
}

.act-btns {
	display: inline-block;
	margin: 0 0;
	text-align: right;
}

.muted {
	color: #bbb;
	font-family: 'Titillium Web', sans-serif;
	font-size: 80%;
}

.ubtn {
	border: 1px #444 solid;
	border-top: #888 solid 1px;
	border-left: #999 solid 1px;
	border-radius: 5px;
	padding: 0 5px 0 4px;
}

.sysmsg {
	padding: 0 8px;
	background-color: #633;
	border-left: 1px solid #737373;
	border-right: 1px solid #444;
}
.sysmsg.red {
	background-color: #633;
}
.sysmsg.yellow {
	background-color: #636;
}
.sysmsg.green {
	background-color: #343;
}


header {
	display: flex;
	justify-content: space-between;
	align-items: center;
	margin: auto;
	max-width: 1050px;
	> h1 {
		display: inline-block;
		font-family: 'Titillium Web', sans-serif;
		font-size: 300%;
		margin: 0 0 16px 0;
	}
	> ul {
		display: flex;
		justify-content: space-between;
		> li {
			margin: 0 0.3rem;
			border-bottom: #4e0029 solid 2px;
			border-radius: 0 0 2px 2px;
			&:hover, &.active { border-bottom: #880046 solid 2px; }
			a {
				font-size: 108%;
				padding: 0 1rem;
			}
		}
	}
}

content {
	display: block;
	margin: auto 1%;
	text-align: center;
	header { max-width: none; }
	h3 { text-align: left; }
	&.full { min-width: 97%; }
	&.fw { min-width: 97%; }
	&.mw {
		width: 1079px;
		margin: auto;
	}
	&.lw {
		width: 1050px;
		text-align:left;
	}
	&.diff {
		display: flex;
		justify-content: flex-start;
		gap: 1em;
		width: unset;
		max-width: 96%;
	}
	&.search {
		min-width: 50rem;
		width: auto;
	}
}

buttons {
	display: flex;
	justify-content: space-between;
}

button {
	font-size: 108%;
	font-weight: 600;
	background-color: #222;
	font-family: 'Titillium Web', sans-serif;
	padding: 0.25em 1em;
	border-top: #888 solid 1px;
	border-right: 1px #444 solid;
	border-bottom: #444 solid 2px; 
	border-left: #999 solid 1px;
	border-radius: 4px;
	&:hover, &.active { border-bottom: #880046 solid 2px; }
	&.red { color: red; }
}

lines {
	display: inline-block;
	font-family: monospace;
	text-align: right;
	width: 50px;
}

.codeblock {
	background: #333;
	white-space-collapse: break-spaces;
}

code {
	display: inline-block;
	font-family: "Ubuntu Mono", monospace, sans-serif;
	text-align: left;
	width: 100%;
	.blame-line {
		white-space: nowrap;
		display: block;
		.blame-header {
			display: inline-block;
			color: #aaa;
			min-width: 20rem;
			a { color: #aaa; }
			.muted {
				color: #888;
				max-height: 17px;
			}
			sha {
				width: 5em;
				display: inline-block;
			}
			author {
				width: 8em;
				display: inline-block;
			}
			time {
				width: 6.6em;
				display: inline-block;
				text-align: right;
			}
		}
	}
}

ln {
	white-space: pre;
	display: inline-block;
	width: 100%;
	&:before {
		content: attr(num);
		width: 3em;
		display: inline-block;
		text-align:center;
		background: #fff1;
		color: #fff8;
		margin: 0 0.5em 0 0;
	}
	&:target { background-color: #222;  }
	&:empty { width: auto; }

	&.del { background: #633 }
	&.add { background: #353 }
	&.nul {
		background: #2228;
		height: 1em;
		margin: 0 2px;
	}
	&.del:target { background: #a44 }
	&.add:target { background: #484 }
	&.nul:target {
		background: #2228;
		height: 1em;
		margin: 0 2px;
	}

	lnex {
		white-space: pre;
		display: inline-block;
		&:before {
			content: attr(num);
			width: 3em;
			display: inline-block;
			text-align:center;
			background: #fff1;
			color: #fff8;
			margin: 0 0.5em 0 0;
		}
	}
}
/* ... */

